Movies & charact done
