# src/middleware/validate.js
@@ -1,40 +1,36 @@
 const validator = require('../helpers/validator');
 
-const saveUser = (req, res, next) => {
-  const validationRule = {
-
-    name: 'required|string|min:3',
-    last_name: 'required|string',
-    nickname: 'string',
-    email: 'required|email',
-    password: 'required|string|min:6',
-    phone: 'numeric',
-    birthday: 'string'
-  };
-  validator(req.body, validationRule, {}, (err, status) => {
-    if (!status) {
-      res.status(412).send({
-        success: false,
-        message: 'Validation failed',
-        data: err
-      });
-    } else {
-      next();
-    }
-  });
-};
-
-const saveBook = (req, res, next) => {
+const saveMovie = (req, res, next) => {
     const validationRule = {
   
-    title: 'required|string|min:3',
-    description: 'string',
-    author: 'required|string|min:4',
-    imagePath: 'required|string',
-    details: 'string',
-    aboutAuthor: 'string',
-    categories: 'required|string',
-    imageAuthor: 'string'
+      title: 'required|string',
+      promoImage: 'required|string',
+      year: 'required|integer',
+      era: 'required|string',
+      length: 'required|string',
+      trailerLink: 'required|string',
+      trivia: 'required|string',
+      category: 'required|string'
+    };
+    validator(req.body, validationRule, {}, (err, status) => {
+      if (!status) {
+        res.status(412).send({
+          success: false,
+          message: 'Validation failed',
+          data: err
+        });
+      } else {
+        next();
+      }
+    });
+  };
+
+  const saveCharacter = (req, res, next) => {
+    const validationRule = {
+      name: 'required|string',
+      role: 'required|string',
+      description: 'required|string',
+      trivia: 'required|string'
     };
     validator(req.body, validationRule, {}, (err, status) => {
       if (!status) {
@@ -50,6 +46,6 @@ const saveBook = (req, res, next) => {
   };
 
 module.exports = {
-  saveUser,
-  saveBook
+  saveMovie,
+  saveCharacter
 };
