# src/routes/index.js
@@ -2,7 +2,9 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/', require('./swagger'));
-router.use('/books', require('./books'))
-router.use('/users', require('./users'))
+router.use('/movies', require('./movies'))
+router.use('/characters', require('./characters'))
+// router.use('/eras', require('./eras'))
+// router.use('/spinoff', require('./spinoff'))
 
 module.exports = router;
